--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="1"
     tools:context="io.github.juntrinh.callroulette.MainActivity">
-
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/image_logo"
+        android:src="@drawable/logo"/>
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:id="@+id/text_view"
+        android:text="Call Roulette"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
+    <Chronometer
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:textSize="30dp"
+        android:textAlignment="center"
+        android:id="@+id/clock_view"/>
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:id="@+id/callButton"
+        android:textAlignment="center"
+        android:text="Call Someone"/>
+
+
+</LinearLayout>
